fix(css/_street_view_switch): add flex gap between elements

--- a/assets/css/map/controls/_street_view_switch.scss
+++ b/assets/css/map/controls/_street_view_switch.scss
@@ -17,6 +17,7 @@
   // #region Layout
   display: flex;
   align-items: center;
+  gap: 4px;
 
   font-size: 1rem;
   line-height: 1.5rem;
@@ -28,10 +29,6 @@
   // #endregion
 
   // #region Sub-Components
-  &__label {
-    padding-right: 0.5rem;
-  }
-
   &__label-icon svg {
     fill: currentColor;
 
